--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.2",
     "react-facebook-login": "^4.1.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
